# omr-leadsheet

./: .gitignore  LICENSE  README.md  classifier.pt  dataset_corrections.json  pyproject.toml  requirements.txt
data/: songbook_groundtruth.json
docs/: chord-notation.md  classifier.md  failure_modes.md  getting-started.md  pipeline.md  vlm.md
pipeline/: charts.py  chord_blob_scan.py  chord_diff.py  chord_parser.py  chord_row_ocr.py  chord_vlm.py  classifier_infer.py  cleanup_mxl.py  dataset_context_crops.py  dataset_extract.py  dataset_extract_unlabeled.py  dataset_import_corrections.py  dataset_label_ui.py  dataset_prefill_labels.py  extract_lyrics.sh  head_recovery.py  inspect_mxl.py  merge_omr.py  pipeline_log.py  reduce_to_lead.py  review_tool.py  spell_check_lyrics.py  summary.py  suspicious_measures.py  synth_chord_renderer.py  train_classifier.py
scripts/: batch_all.sh  check_unbounded_io.py  env.sh  extract_lyrics.sh  process_song.sh  realign_vlm_results.py  songbook_survey.py  truth_compare.py  truth_init.py  vlm_verify.py  vlm_verify.sh
tests/: conftest.py  test_bare_root_chord_dedup.py  test_batch_dir.py  test_blob_scan.py  test_chord_diff.py  test_chord_normalize.py  test_chord_parser.py  test_cleanup.py  test_config.py  test_cross_engine_recovery.py  test_curly_apostrophe.py  test_diff_augmented_plus.py  test_diff_bb_flat_parse.py  test_diff_degree_dedup.py  test_diff_paren_dedup.py  test_diff_redistribute.py  test_diff_stacked_97_kind.py  test_diff_stacked_dom9.py  test_dispatcher_timeouts.py  test_key_aware_pitch.py  test_key_filter.py  test_paths.py  (+20 more)
(+80 files in other folders)
