[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omr-leadsheet"
version = "0.2.0"
description = "Convert scanned piano-vocal PDFs into jazz-style single-staff lead sheets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Dheeraj Chand" }]
keywords = ["omr", "music21", "musicxml", "leadsheet", "audiveris", "jazz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "music21>=9.0",
    "matplotlib>=3.8",
    "pillow>=10",
    "typer>=0.12",
]

[project.optional-dependencies]
classifier = ["torch>=2.1"]
oemer = ["oemer>=0.1.5"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
omr-lead = "omr_leadsheet.cli:app"

[project.urls]
Homepage = "https://github.com/dheerajchand/omr-leadsheet"
Issues = "https://github.com/dheerajchand/omr-leadsheet/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
